[mod] 주문 메뉴 변경 swagger 파라미터 타입 수정
